# nex_tract

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  prompt.md  run.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: 01-vision.md  02-mini-srs.md  03-architecture.md  04-design.md  05-folder-structure.md  CORE-COMMANDS.md  FUTURE_PLAN.md  PHASE_9_IMPLEMENTATION.md  PROGRESS.md  RELEASE_CHECKLIST.md  SETUP.md  USAGE.md  prompt.md
docs/context/: AI-CONTEXT.md  (+1 more)
scripts/: build.sh  dev.sh  version.sh
server/: .gitignore  Dockerfile  README.md  build-server.ps1  build-server.sh  nextract-server.spec  pyproject.toml  run_server.py  test_impersonate.py  test_invidious.json  test_no_impersonate.py  test_proxy.py  test_ydl.py  test_ydl2.py
server/app/: main.py
server/app/api/routes/: analyze.py  downloads.py  health.py  history.py  playlists.py  proxy.py  settings.py
server/app/core/: config.py  errors.py  logger.py
server/app/db/: database.py  models.py
server/app/schemas/: analyze.py  download.py  history.py  playlist.py  settings.py
server/app/services/: analyze_service.py  download_service.py  exceptions.py  format_service.py  generic_service.py  history_service.py  instagram_media_proxy_service.py  playlist_service.py  settings_service.py  thumbnail_proxy_service.py
server/app/utils/: filename.py  platform_detector.py  progress_parser.py  validators.py
server/app/workers/: queue.py
server/tests/: conftest.py  test_analyze.py  test_downloads.py  test_generic_service.py  test_health.py  test_history_settings.py  test_instagram.py  test_links.py  test_platform_detector.py  test_playlists.py  test_safety_checks.py  test_soundcloud.py  test_tiktok.py  test_x.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: README.md  next.config.ts  package.json
(+40 files in other folders)
