[project]
name = "nextract-server"
version = "1.9.1"
description = "FastAPI backend for Nextract"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
